--- a/apps/frontend/modules/discussion_peer/config/generator.yml
+++ b/apps/frontend/modules/discussion_peer/config/generator.yml
@@ -42,7 +42,7 @@ generator:
           done:                        []
           _save:                       []
       new:
-        title:                         Join Group
+        title:                         Join Discussion
         actions:
           cancel:                      []
           _save:                       []
