--- a/apps/frontend/modules/tpProfileQualification/config/view.yml
+++ b/apps/frontend/modules/tpProfileQualification/config/view.yml
@@ -1,2 +1,8 @@
 all:
-  stylesheets:    [ secure.css ]
+  stylesheets:    [ secure.css, profile.css ]
+  
+newSuccess:
+  has_layout: false
+  
+editSuccess:
+  has_layout: false
