--- a/apps/frontend/modules/tpProfileQualification/config/generator.yml
+++ b/apps/frontend/modules/tpProfileQualification/config/generator.yml
@@ -2,7 +2,7 @@ generator:
   class: sfDoctrineGenerator
   param:
     model_class:           ProfileQualification
-    theme:                 normal
+    theme:                 popup
     non_verbose_templates: true
     with_show:             false
     singular:              ~
