--- a/apps/frontend/modules/tpProfileQualification/config/view.yml
+++ b/apps/frontend/modules/tpProfileQualification/config/view.yml
@@ -1,5 +1,5 @@
 all:
-  stylesheets:    [ secure.css, profile.css ]
+  stylesheets:    [ secure.css, qualification.css ]
   
 newSuccess:
   has_layout: false
